<resources>
    <string name="app_name" translatable="false">Calcola sconto</string>
    <string name="nav_header_title" translatable="false">Calcola sconto</string>
    <string name="nav_header_subtitle" translatable="false">By Marco</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="theme_header">Look</string>
    <string name="setting_shortcut">Preferences</string>
    <string name="summary_shortcut">Will remove the button in the home</string>
    <string name="theme_title">Theme</string>
    <string name="shortcut_title">Copy the result directly</string>

    <string name="calculate_button">Calculate</string>
    <string name="clear_button">Clear</string>

    <string name="first_hint">Enter the price</string>
    <string name="second_hint">Enter the percentage</string>

    <string name="apply_button">Apply</string>

    <string name="gallery_fragment1">Help with translations</string>
    <string name="gallery_fragment_subtitle1">Open a pull request on Github</string>
    <string name="gallery_fragment2">Feedback and feature requests</string>
    <string name="gallery_fragment_subtitle2">Feel free to help the project</string>
    <string name="version">App version:</string>

    <string name="discount_title">Show savings</string>
    <string name="summary_discount">Look how much you have saved</string>

    <string name="black_mode_title">Amoled dark mode</string>
    <string name="summary_black_mode">It will use pure black</string>

    <string name="copy_snackbar">Result copied to clipbord</string>

    <string name="symbol">\u0020 £</string>

    <string name="savings"> Savings: \u0020</string>
    <string name="default_result">0.00 \u0020 £</string>

    <string name="error">Enter valid values</string>

    <string name="copy_result">Copy result</string>
    <string name="copy_saving">Copy saving</string>
    <string name="copy">Copy</string>

    <string name="accessibility1">Click here to apply settings</string>

</resources>