<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_header">

        <ListPreference
            app:defaultValue="follow_system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />
<!--        <CheckBoxPreference-->
<!--            android:defaultValue="false"-->
<!--            android:key="check_box_preference_black_mode"-->
<!--            android:title="@string/black_mode_title"-->
<!--            app:summary="@string/summary_black_mode" />-->
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/setting_shortcut">


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_shortcut"
            android:title="@string/shortcut_title"
            app:defaultValue="false"
            app:summary="@string/summary_shortcut" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="check_box_preference_discount"
            android:title="@string/discount_title"
            app:summary="@string/summary_discount"/>


    </PreferenceCategory>


</PreferenceScreen>