<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment"
    android:background="?attr/colorPrimarySurface">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:backgroundTint="?attr/cardBackgroundColor"
            android:id="@+id/cardView1"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_fragment1"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:paddingStart="10dp"
                    android:drawablePadding="10dp"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_baseline_translate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:text="@string/gallery_fragment_subtitle1"
                    android:layout_gravity="bottom"
                    android:paddingBottom="10dp"
                    android:paddingStart="45dp">
                </TextView>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:backgroundTint="?attr/cardBackgroundColor"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/gallery_fragment2"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/ic_baseline_feedback" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingStart="45dp"
                    android:paddingBottom="10dp"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:text="@string/gallery_fragment_subtitle2"
                    android:textSize="16sp">
                </TextView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:backgroundTint="?attr/cardBackgroundColor"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="44dp"
                    android:text="@string/version"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:textSize="18sp">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewVersion"
                    android:layout_gravity="bottom"
                    android:paddingStart="45dp"
                    android:paddingBottom="10dp"
                    android:textColor="?attr/colorOnPrimarySurface"
                    android:textSize="16sp">
                </TextView>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>